--- a/REFix.vcxproj
+++ b/REFix.vcxproj
@@ -151,10 +151,15 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="AnimationCurveMutator.h" />
+    <ClInclude Include="AnimCurveFlattener.h" />
+    <ClInclude Include="init.h" />
     <ClInclude Include="REFix.h" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="REFix.cpp" />
+    <ClCompile Include="AnimationCurveMutator.cpp" />
+    <ClCompile Include="AnimCurveFlattener.cpp" />
+    <ClCompile Include="init.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
