--- a/REFix.vcxproj
+++ b/REFix.vcxproj
@@ -152,6 +152,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="AnimationCurveMutator.h" />
+    <ClInclude Include="AnimCurveStraightener.h" />
     <ClInclude Include="AnimCurveFlattener.h" />
     <ClInclude Include="init.h" />
     <ClInclude Include="REFix.h" />
@@ -159,6 +160,7 @@
   <ItemGroup>
     <ClCompile Include="AnimationCurveMutator.cpp" />
     <ClCompile Include="AnimCurveFlattener.cpp" />
+    <ClCompile Include="AnimCurveStraightener.cpp" />
     <ClCompile Include="init.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
