--- a/REFix.vcxproj.filters
+++ b/REFix.vcxproj.filters
@@ -24,12 +24,18 @@
     <ClInclude Include="AnimCurveFlattener.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="AnimCurveStraightener.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
     <ClInclude Include="init.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="AnimationCurveMutator.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="AnimCurveStraightener.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="AnimCurveFlattener.cpp">
