--- a/REFix.vcxproj.filters
+++ b/REFix.vcxproj.filters
@@ -30,6 +30,9 @@
     <ClInclude Include="init.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Undamper.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="AnimationCurveMutator.cpp">
@@ -42,6 +45,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="init.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Undamper.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
