--- a/REFix.vcxproj.filters
+++ b/REFix.vcxproj.filters
@@ -33,6 +33,9 @@
     <ClInclude Include="Undamper.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Hooks.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="AnimationCurveMutator.cpp">
