--- a/REFix.vcxproj.filters
+++ b/REFix.vcxproj.filters
@@ -53,5 +53,8 @@
     <ClCompile Include="Undamper.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Hooks.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
